# django_template

./: .coveragerc  .gitignore  README.MD  pyproject.toml
config/: settings.py  urls.py
env/: .env-default
project_name/: settings.py  urls.py
templates/: base.html
users/: models.py
users/migrations/: 0001_initial.py  0002_superuser.py
